--- a/01_simple_playbooks/02_copy_and_template/main.yaml
+++ b/01_simple_playbooks/02_copy_and_template/main.yaml
@@ -5,7 +5,7 @@
     custom_var: ansible
     user_home_dir: /home/ansible
   vars_files:
-      - vars/main.yaml
+      - vars/vars.yaml
   tasks:
     - name: copy file from files directory
       copy:
